# string-machine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  RELEASE-CHECKLIST.md
.github/workflows/: build.yml
.travis/: cairo-1.16.0-subdirs.patch  pixman-0.38.4-subdirs.patch  script-linux.sh  script-macos.sh  script-mingw.sh
dsp/: Architecture.cpp  ArchitectureFooter.cpp  StringFiltersHighshelf.dsp
plugins/string-machine/: Artwork.cpp  Artwork.hpp  DistrhoPluginInfo.h  Makefile  StringMachinePlugin.cpp  StringMachinePlugin.hpp  StringMachinePresets.cpp  StringMachinePresets.hpp  StringMachinePresets.inc  StringMachineShared.cpp  StringMachineShared.hpp  StringMachineUI.cpp  StringMachineUI.hpp  StringMachineUILayouts.Main.inc  StringMachineUILayouts.hpp
plugins/string-machine-chorus/: ChorusPlugin.cpp  ChorusPlugin.hpp  ChorusShared.cpp  DistrhoPluginInfo.h  Makefile
plugins/string-machine-chorus-stereo/: DistrhoPluginInfo.h  Makefile  StereoChorusPlugin.cpp  StereoChorusShared.cpp
plugins/string-machine-chorus-stereo/meta/: DistrhoPluginInfo.h
plugins/string-machine-chorus/meta/: DistrhoPluginInfo.h
plugins/string-machine/layouts/: Main.fl
plugins/string-machine/meta/: DistrhoPluginInfo.h
presets/string-machine/: 001-MelodicBySM.json  002-DrumsBySM.json
resources/ui/: knob.knob  layout.fl  led.knob  slider.knob  toggle-button.knob  trigger-button.knob  value-display.knob  vu.knob
scripts/: benchmark-dsp.sh  create-git-archive.sh
sources/: BassOsc.cpp  BassOsc.h  MidiDefs.cpp  MidiDefs.h  SolinaChorus.cpp  SolinaChorus.h  SolinaChorusStereo.cpp  SolinaChorusStereo.h  StringFilters.cpp  StringFilters.h  StringOsc.cpp  StringOsc.h  StringSynth.cpp  StringSynth.h  StringSynthDefs.h
sources/bbd/: bbd_filter.cpp  bbd_filter.h  bbd_line.cpp  bbd_line.h
sources/dsp/: ADSREnvelope.cpp  ADSREnvelope.h  AHDSREnvelope.cpp  AHDSREnvelope.h  AmpFollower.h  AsymWaveshaper.dsp  Delay3Phase.cpp  Delay3Phase.h  Delay3PhaseDigital.dsp  Delay3PhaseStereo.cpp  Delay3PhaseStereo.h  DelayAntialiasFilter.cpp  DelayAntialiasFilter.h  LFO3PhaseDual.cpp  LFO3PhaseDual.dsp  LFO3PhaseDual.h  NoiseLFO.dsp  OnePoleFilter.cpp  OnePoleFilter.h  OscillatorBlepRect.cpp  PwmOscillator.dsp  SmoothFilter.h  StringFiltersHighshelf.dsp  TriangleLFO.h
sources/dsp/architecture/: Generic.cpp  Generic.hpp
sources/ui/: Cairo++.cpp  Cairo++.h  Color.h  FontEngine.cpp  FontEngine.h  Fontstash.cpp  Fontstash.h  Geometry.h
sources/ui/components/: KnobSkin.cpp  KnobSkin.hpp  PlotView.cpp  PlotView.hpp  SkinIndicator.cpp  SkinIndicator.hpp  SkinSlider.cpp  SkinSlider.hpp  SkinToggleButton.cpp  SkinToggleButton.hpp  SkinTriggerButton.cpp  SkinTriggerButton.hpp
sources/ui/geometry/: Point.h  Rect.h
tests/string-osc/: Makefile
tests/string-osc/sources/: main.cpp
tools/benchmarks/: Makefile
tools/benchmarks/sources/: main.cpp
tools/layout-tool/: CMakeLists.txt  Makefile  README
tools/layout-tool/sources/: layout.cpp  layout.h  main.cpp  reader.cpp
tools/presets/: Makefile  thirdparty
tools/presets-from-zynthian/: Makefile
tools/presets-from-zynthian/sources/: main.cpp
tools/presets/sources/: main.cpp
